# bimbo-lashes

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.claude/: launch.json
.github/workflows/: backup.yml  ci.yml  deploy.yml  setup-vps.yml
apps/bot/: Cargo.toml  Dockerfile
apps/bot/src/: main.rs
apps/server/: Cargo.toml  Dockerfile
apps/server/migrations/: 001_init.sql
apps/server/src/: auth.rs  db.rs  main.rs  models.rs  rate_limit.rs  telegram_layer.rs
apps/server/src/handlers/: admin.rs  client.rs  health.rs  mod.rs  payment.rs
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  app.css  index.tsx
apps/web/src/components/: Calendar.tsx  Loader.tsx
apps/web/src/lib/: api.ts  router.ts  utils.ts
apps/web/src/pages/: AdminPage.tsx  AdminSchedulePage.tsx  AdminServicesPage.tsx  BookingPage.tsx  HomePage.tsx  MyBookingsPage.tsx
docs/api/: openapi.yaml
docs/architecture/: design.md
docs/product/: PRD.md
infra/: Caddyfile
scripts/: backup.sh  health-check.sh  notify.sh  rollback.sh  setup-vps.sh
tests/e2e/: package-lock.json  package.json  playwright.config.ts
tests/e2e/specs/: admin.spec.ts  booking-flow.spec.ts
tests/integration/: api.test.ts  package-lock.json  package.json  validation.test.ts  vitest.config.ts
