[package]
name = "bimbo-lashes-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

teloxide = { version = "0.13", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
