[package]
name = "bimbo-lashes-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

axum = { version = "0.8", features = ["macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
